--- a/app/src/main/res/layout/fragment_car_shop.xml
+++ b/app/src/main/res/layout/fragment_car_shop.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:overScrollMode="never">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -77,13 +78,12 @@
 
         <ImageView
             android:id="@+id/iv_info"
-            android:scaleType="fitStart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="fitStart"
             android:src="@drawable/info_qingtong" />
 
         <LinearLayout
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/comm_white"
@@ -91,7 +91,8 @@
             android:paddingBottom="13dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            android:paddingTop="13dp">
+            android:paddingTop="13dp"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
