--- a/app/src/main/res/layout/fragment_prop_shop.xml
+++ b/app/src/main/res/layout/fragment_prop_shop.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:overScrollMode="never">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,58 +13,58 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitStart"
-            android:src="@drawable/info_guard"/>
+            android:src="@drawable/info_guard" />
         <!--<ImageView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:scaleType="fitXY"-->
-            <!--android:src="@drawable/img_guard" />-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@drawable/img_guard" />-->
 
         <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginTop="3dp"-->
-            <!--android:background="@color/comm_white"-->
-            <!--android:orientation="vertical">-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="3dp"-->
+        <!--android:background="@color/comm_white"-->
+        <!--android:orientation="vertical">-->
 
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="14dp"-->
-                <!--android:layout_marginTop="3dp"-->
-                <!--android:text="如何开通守护"-->
-                <!--android:textColor="@color/text_view"-->
-                <!--android:textSize="17sp" />-->
+        <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="14dp"-->
+        <!--android:layout_marginTop="3dp"-->
+        <!--android:text="如何开通守护"-->
+        <!--android:textColor="@color/text_view"-->
+        <!--android:textSize="17sp" />-->
 
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="14dp"-->
-                <!--android:layout_marginTop="3dp"-->
-                <!--android:text="在喜欢的主播房间 - 顶部头像区域，点击展开守护浮层进行开通"-->
-                <!--android:textColor="#909090"-->
-                <!--android:textSize="12sp" />-->
+        <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="14dp"-->
+        <!--android:layout_marginTop="3dp"-->
+        <!--android:text="在喜欢的主播房间 - 顶部头像区域，点击展开守护浮层进行开通"-->
+        <!--android:textColor="#909090"-->
+        <!--android:textSize="12sp" />-->
 
-            <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="5dp"-->
-                <!--android:layout_marginTop="2dp"-->
-                <!--android:orientation="horizontal">-->
+        <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:layout_marginTop="2dp"-->
+        <!--android:orientation="horizontal">-->
 
-                <!--<ImageView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="15dp"-->
-                    <!--android:src="@drawable/img_no_guard" />-->
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="15dp"-->
+        <!--android:src="@drawable/img_no_guard" />-->
 
-                <!--<ImageView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_marginRight="15dp"-->
-                    <!--android:src="@drawable/img_has_guard" />-->
-            <!--</RelativeLayout>-->
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="15dp"-->
+        <!--android:src="@drawable/img_has_guard" />-->
+        <!--</RelativeLayout>-->
         <!--</LinearLayout>-->
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
