--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,29 +7,23 @@
     android:orientation="vertical">
 
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+        <include layout="@layout/white_toolbar" />
 
-            <include layout="@layout/white_toolbar" />
+        <include layout="@layout/divider_shawdow_white" />
+    </LinearLayout>
 
-            <include layout="@layout/divider_shawdow_white" />
-        </LinearLayout>
-
-        <com.whzl.mengbi.ui.widget.tablayout.TabLayout
-            android:id="@+id/tab_shop"
-            style="@style/ShopTab"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            app:tabGravity="fill"
-            app:tabMode="scrollable" />
-    </android.support.design.widget.AppBarLayout>
+    <com.whzl.mengbi.ui.widget.tablayout.TabLayout
+        android:id="@+id/tab_shop"
+        style="@style/ShopTab"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        app:tabGravity="fill"
+        app:tabMode="scrollable" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
@@ -38,4 +32,4 @@
         android:overScrollMode="never"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
