--- a/app/src/main/res/layout/fragment_goodnum_shop.xml
+++ b/app/src/main/res/layout/fragment_goodnum_shop.xml
@@ -147,7 +147,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="13.5dp"
-                    android:drawableLeft="@drawable/ic_pretty_a"
+                    android:drawableLeft="@drawable/ic_refresh_goodnum_shop"
+                    android:drawablePadding="5dp"
                     android:text="换一批"
                     android:textColor="#70000000"
                     android:textSize="13sp" />
@@ -192,7 +193,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="13.5dp"
-                    android:drawableLeft="@drawable/ic_pretty_a"
+                    android:drawableLeft="@drawable/ic_refresh_goodnum_shop"
+                    android:drawablePadding="5dp"
                     android:text="换一批"
                     android:textColor="#70000000"
                     android:textSize="13sp" />
@@ -237,7 +239,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="13.5dp"
-                    android:drawableLeft="@drawable/ic_pretty_a"
+                    android:drawableLeft="@drawable/ic_refresh_goodnum_shop"
+                    android:drawablePadding="5dp"
                     android:text="换一批"
                     android:textColor="#70000000"
                     android:textSize="13sp" />
@@ -282,7 +285,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="13.5dp"
-                    android:drawableLeft="@drawable/ic_pretty_a"
+                    android:drawableLeft="@drawable/ic_refresh_goodnum_shop"
+                    android:drawablePadding="5dp"
                     android:text="换一批"
                     android:textColor="#70000000"
                     android:textSize="13sp" />
