--- a/app/src/main/res/layout/dialog_prop_shop.xml
+++ b/app/src/main/res/layout/dialog_prop_shop.xml
@@ -59,8 +59,7 @@
                     android:layout_marginRight="2dp"
                     android:gravity="end"
                     android:textColor="#646464"
-                    android:textSize="13sp"
-                    android:textStyle="italic" />
+                    android:textSize="13sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -77,6 +76,40 @@
                     android:textColor="#646464"
                     android:textSize="12sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_reduce_diaolog_prop_shop"
+                        android:layout_width="44dp"
+                        android:layout_height="24dp"
+                        android:gravity="center"
+                        android:text="—"
+                        android:textColor="@color/text_view"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/tv_num_diaolog_prop_shop"
+                        android:layout_width="48.5dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/bg_num_dialog_prop_shop"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textColor="#696969"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tv_add_diaolog_prop_shop"
+                        android:layout_width="44dp"
+                        android:layout_height="24dp"
+                        android:gravity="center"
+                        android:text="+"
+                        android:textColor="@color/text_view"
+                        android:textSize="14sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -90,24 +123,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="时     长:"
+                    android:text="消     费:"
                     android:textColor="#646464"
                     android:textSize="12sp" />
 
+
                 <TextView
+                    android:id="@+id/tv_total_dialog_prop_shop"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="end"
-                    android:text="30 "
-                    android:textColor="#646464"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="天"
-                    android:textColor="#646464"
                     android:textSize="12sp" />
             </LinearLayout>
 
