--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         app:tabGravity="fill"
-        app:tabMode="scrollable" />
+        app:tabMode="fixed" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
@@ -31,5 +31,4 @@
         android:layout_height="match_parent"
         android:overScrollMode="never"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 </LinearLayout>
