--- a/app/src/main/res/layout/head_prop.xml
+++ b/app/src/main/res/layout/head_prop.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/bg_color"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -12,9 +11,9 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="25dp"
         android:gravity="center"
-        android:text="名称"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:text="物品"
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,8 +22,8 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="数量"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,6 +34,6 @@
         android:layout_weight="1"
         android:gravity="center"
         android:text="有效期"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 </RelativeLayout>
