--- a/app/src/main/res/drawable/bg_button_pack_gray.xml
+++ b/app/src/main/res/drawable/bg_button_pack_gray.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#d9d9d9" />
-    <corners android:radius="2dp" />
+    <solid android:color="#e5e5e5" />
+    <corners android:radius="21dp" />
 </shape>
