--- a/app/src/main/res/drawable/bg_button_pack_orange.xml
+++ b/app/src/main/res/drawable/bg_button_pack_orange.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#ff611b" />
-    <corners android:radius="2dp" />
+    <solid android:color="#ff2d4e" />
+    <corners android:radius="21dp" />
 </shape>
