--- a/app/src/main/res/layout/head_packvip.xml
+++ b/app/src/main/res/layout/head_packvip.xml
@@ -1,44 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/bg_color"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingLeft="18dp"
+    android:paddingRight="35dp">
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_centerVertical="true"
         android:gravity="center"
-        android:text="名称"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:text="物品"
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="数量"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_weight="1"
         android:gravity="center"
         android:text="有效期"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="每日奖励"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
-</LinearLayout>
+        android:text="续费"
+        android:textColor="#70000000"
+        android:textSize="12sp" />
+</RelativeLayout>
