--- a/app/src/main/res/layout/head_prop.xml
+++ b/app/src/main/res/layout/head_prop.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="44dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="25dp"
         android:gravity="center"
         android:text="物品"
         android:textColor="#70000000"
@@ -30,7 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="25dp"
         android:layout_weight="1"
         android:gravity="center"
         android:text="有效期"
