--- a/app/src/main/res/layout/item_prop_pack.xml
+++ b/app/src/main/res/layout/item_prop_pack.xml
@@ -11,16 +11,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#ff2d4e"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -28,12 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="14sp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/divider_color_pack" />
 </RelativeLayout>
