--- a/app/src/main/res/layout/item_vip_pack.xml
+++ b/app/src/main/res/layout/item_vip_pack.xml
@@ -2,79 +2,91 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp">
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textColor="@color/text_hint"
-            android:textSize="16sp" />
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_vip_shop" />
 
         <TextView
             android:id="@+id/tv_day"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_centerInParent="true"
+            android:textColor="#70000000"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/tv_add"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/shape_yellow_btn"
             android:gravity="center"
-            android:textColor="@color/text_hint"
-            android:textSize="16sp" />
+            android:text="续费"
+            android:textColor="#70000000"
+            android:textSize="15sp" />
 
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/tv_add"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/bg_button_pack_blue"
-                android:gravity="center"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:text="续费"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-        </FrameLayout>
-
-
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/tv_receive"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/bg_button_pack_orange"
-                android:gravity="center"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-        </FrameLayout>
-    </LinearLayout>
-
-    <View
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
-        android:background="@color/divider_color_pack" />
+        android:layout_marginTop="37dp"
+        android:background="@drawable/bg_reward_vip_pack"
+        android:gravity="center"
+        android:text="每日奖励"
+        android:textColor="@color/text_view"
+        android:textSize="12sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="59.5dp"
+            android:drawablePadding="11dp"
+            android:drawableTop="@drawable/ic_yaoji_vip_pack"
+            android:gravity="center"
+            android:text="66个蓝色妖姬"
+            android:textColor="#70000000"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="11dp"
+            android:drawableTop="@drawable/ic_broad_vip_pack"
+            android:gravity="center"
+            android:text="1个广播卡"
+            android:textColor="#70000000"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_receive"
+        android:layout_width="130.5dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="17.5dp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 </LinearLayout>
