--- a/app/src/main/res/drawable/bg_button_pack_blue_border.xml
+++ b/app/src/main/res/drawable/bg_button_pack_blue_border.xml
@@ -2,9 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#f9f9f9" />
-    <corners android:radius="2dp" />
-    <stroke
-        android:width="1dp"
-        android:color="#2198dc" />
+    <solid android:color="#ffd634" />
+    <corners android:radius="21dp" />
 </shape>
