--- a/app/src/main/res/layout/empty_pretty_pack.xml
+++ b/app/src/main/res/layout/empty_pretty_pack.xml
@@ -8,36 +8,15 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:src="@drawable/ic_empty_prop" />
+        android:layout_marginTop="108dp"
+        android:src="@drawable/img_empty_follow" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="27.5dp"
         android:gravity="center"
-        android:text="您还没有购买靓号！"
-        android:textColor="@color/colorCommNotActive"
-        android:textSize="20sp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="立即购买靓号,彰显尊贵身份！"
-        android:textColor="@color/colorCommNotActive"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/tv_open"
-        android:layout_width="290dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/bg_button_pack_blue"
-        android:gravity="center"
-        android:paddingBottom="13dp"
-        android:paddingTop="13dp"
-        android:text="去购买"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:text="你还没有靓号，去商城逛一逛吧"
+        android:textColor="#60000000"
+        android:textSize="12sp" />
 </LinearLayout>
