--- a/app/src/main/res/layout/head_pretty_pack.xml
+++ b/app/src/main/res/layout/head_pretty_pack.xml
@@ -2,52 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/bg_color"
+    android:background="@color/white"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp">
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="78dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:text="靓号"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="78dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
         android:text="有效期"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="12sp" />
+
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="78dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="状态"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:text="装备"
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
     <TextView
-        android:layout_width="0dp"
+        android:layout_width="78dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="操作"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="续费"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 </LinearLayout>
